gccida/g1/getpwd
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/getpwd/src/getpwd.c:538:6: error: use of undeclared identifier 'pwd_1'
v0 = pwd_1; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/getpwd/src/getpwd.c:539:7: error: use of undeclared identifier 'pwd_1'
if ( !pwd_1 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/getpwd/src/getpwd.c:542:6: error: use of undeclared identifier 'failure_errno_0'
v3 = failure_errno_0; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/getpwd/src/getpwd.c:543:7: error: use of undeclared identifier 'failure_errno_0'
*v2 = failure_errno_0; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/getpwd/src/getpwd.c:546:14: error: use of undeclared identifier 'off_660C72'
v4 = getenv( off_660C72); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/getpwd/src/getpwd.c:564:1: error: use of undeclared identifier 'failure_errno_0'
failure_errno_0 = v6; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/getpwd/src/getpwd.c:570:1: error: use of undeclared identifier 'pwd_1'
pwd_1 = v0; 
^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/getpwd/src/obj/getpwd.o] Error 1
